# meta

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  build.sh  environment.yml  meta.yaml  pyproject.toml
meta/: bundel_density.py  bundle_density.py  bundle_segmentation.py  features.py  main.py  params.yaml  utils.py
meta/core/: corresponds.py  density.py  mesh.py  segments.py
meta/io/: streamline.py  transform.py
meta/metrics/: profile.py  shape.py
meta/utils/: tractogram.py
meta/workflows/: meta.py
src/: VoronoiSkeletonTool.cxx
