[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta"
version = "2.0.1"
authors = [
  { name="Iyad Ba Gari", email="iyad.bagari@usc.edu" },
]
maintainers = [
  { name="Iyad Ba Gari", email="iyad.bagari@usc.edu" },
]

description = "Medial Tractography Analysis (MeTA) for along-tract analysis of white matter bundles"
keywords = ["Diffusion MRI", "tractography", "white matter bundle", "medial volume", "along-tract analysis"]
 
readme = "README.md"
project.license = { file="LICENSE.txt" }
requires-python = ">=3.11"
classifiers = [
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Operating System :: Unix'
]

[project.urls]
Repository = "https://github.com/bagari/meta"

[project.scripts]
meta = "meta.workflows.meta:run_main"
density_map = "meta.core.density:density_map"
shape_metrics = "meta.metrics.shape:shape_features"
volumetric_profile = "meta.metrics.profile:volumetric_profile"
streamlines_profile = "meta.metrics.profile:streamlines_profile"

[tool.setuptools.package-data]
meta = ["*.yaml"]

[tool.setuptools.packages.find]
include = ["meta*"]
exclude = ["src*", "environment*", "CMakeLists*", "resources*"]

